<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:paddingBottom="20dp"
    android:minHeight="72dp">


    <ImageView
        android:id="@+id/msg_chat_profile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/msg_chat_contact"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/msg_chat_profile"
        android:layout_marginLeft="10dp"
        android:lines="1"
        android:text="@string/contract_demo2"
        android:marqueeRepeatLimit="marquee_forever"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:textSize="26sp" />
    <TextView
        android:id="@+id/msg_chat_time"
        android:layout_width="60dp"
        android:lines="1"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/msg_date_demo"
        android:textSize="22sp" />
    <TextView
        android:id="@+id/msg_chat_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_alignTop="@+id/msg_chat_time"
        android:layout_alignLeft="@+id/msg_chat_time"
        android:text="@string/msg_time_demo"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/msg_chat_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/msg_chat_demo1"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/msg_chat_profile" />

</RelativeLayout>
